--- a/location.html
+++ b/location.html
@@ -128,8 +128,8 @@
                       <div class="col-md-4 icon-item-border icon-item-top">
                         <div class="icon-item">
                           <i class="fa fa-map-marker" aria-hidden="true"></i>
-                          <p class="icon-title">Manhattan</p>
-                          <p class="icon-text">90 Bedford Street, Corner Grove, New York City</p>
+                          <p class="icon-title">Sreenarayana Auditorium</p>
+                          <p class="icon-text">Kottakulangara Sree Swaminatha Temple,Peruvattam Thazha,Vatakara Town</p>
                         </div>
                         
                       </div>
@@ -137,14 +137,14 @@
                         <div class="icon-item">
                           <i class="fa fa-calendar" aria-hidden="true"></i>
                           <p class="icon-title">The date</p>
-                          <p class="icon-text">Friday<br> December 16, 2016 </p>
+                          <p class="icon-text">Saturday<br> May 6, 2017 </p>
                         </div>
                       </div>
                       <div class="col-md-4">
                         <div class="icon-item icon-item-top">
                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                          <p class="icon-title">Time</p>
-                          <p class="icon-text">Start ceremony: 1:30 PM<br>Finish ceremony: 11:00 PM </p>
+                          <p class="icon-title">Muhurtham</p>
+                          <p class="icon-text">Between: 12:30 PM<br>and: 12:55 PM </p>
                         </div>
                       </div>
                     </div>
